# controllers/User.js
@@ -1,4 +1,7 @@
 'use strict';
+var dataLayer = require("../utils/DataLayer");
+var db = dataLayer.database;
+var schema = dataLayer.schema;
 
 var utils = require('../utils/writer.js');
 var User = require('../service/UserService');
@@ -17,8 +20,14 @@ module.exports.getUserById = function getUserById (req, res, next) {
 module.exports.logUser = function logUser (req, res, next) {
   var email = req.swagger.params['email'].value;
   var password = req.swagger.params['password'].value;
+
   User.logUser(email,password)
     .then(function (response) {
+
+      //Enable Session
+      req.session.loggedIn = true;
+      req.session.id = response.body.id;
+      
       utils.writeJson(res, response);
     })
     .catch(function (response) {
@@ -26,10 +35,22 @@ module.exports.logUser = function logUser (req, res, next) {
     });
 };
 
+module.exports.logOutUser = function logOutUser(req, res, next) {
+
+  req.session.destroy();
+
+}
+
 module.exports.registerUser = function registerUser (req, res, next) {
   var body = req.swagger.params['body'].value;
+
   User.registerUser(body)
     .then(function (response) {
+
+      //Enable Session
+      req.session.loggedIn = true;
+      req.session.id = response.body.id;
+      
       utils.writeJson(res, response);
     })
     .catch(function (response) {
