# swagger.json
@@ -678,6 +678,30 @@
             },
             "405": {
               "description": "Invalid Input"
+            },
+            "401": {
+              "description": "Unauthorized"
+            }
+          },
+          "x-swagger-router-controller": "User"
+        }
+      },
+      "/user/logout": {
+        "get": {
+          "tags": [
+            "user"
+          ],
+          "summary": "logOut the user.",
+          "operationId": "logOutUser",
+          "consumes": [
+            "application/x-www-form-urlencoded"
+          ],
+          "responses": {
+            "200": {
+              "description": "Successfully Logged Out"
+            },
+            "500": {
+              "description": "Unexpected Error"
             }
           },
           "x-swagger-router-controller": "User"
@@ -706,6 +730,9 @@
             },
             "500": {
               "description": "Unexpected Error"
+            },
+            "401": {
+              "description": "Unauthorized"
             }
           },
           "security": [
